[project]
name = "data-preprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "nbformat>=5.10.4",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "tqdm>=4.66.4",
]
